# ccs-sitin

./: ARCHITECTURE.md  GEMINI.md  Project Requirements.txt  README.md  SETUP_GUIDE.md  TODO.md  ccs_sitin_dump.sql  database-dump.sql  xampp-setup.sql
backend/: ARCHITECTURE.md  Cargo.toml  Rocket.toml  ccs_sitin.db
backend/migrations/: 20260516_add_pc_number_to_sitin.sql
backend/src/: announcements.rs  auth.rs  cors.rs  db.rs  feedback.rs  lab_software.rs  main.rs  models.rs  notifications.rs  reports.rs  reservation.rs  seeders.rs  sitin.rs  students.rs
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: FeedbackModal.jsx  FeedbackViewModal.jsx  NotificationBell.css  NotificationBell.jsx  UserAvatar.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/hooks/: useAuth.js  useAuth.jsx  useDebounce.js
frontend/src/pages/: Auth.css  Landing.css  Landing.jsx  Login.jsx  Register.jsx
frontend/src/pages/admin/: AdminFeedbacks.jsx  AdminHome.jsx  AdminLabSoftware.jsx  AdminLayout.css  AdminLayout.jsx  AdminRecords.jsx  AdminReports.jsx  AdminReservations.jsx  AdminSitin.jsx  AdminStudents.jsx
frontend/src/pages/student/: EditProfile.jsx  StudentDashboard.css  StudentDashboard.jsx
