[package]
name = "ccs-sitin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }

sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
